# rcoplo_bot

./: Cargo.toml  LICENSE  Nonebotrs.toml  README.md
.github/workflows/: build.yml  rust.yml
resources/data/: bot.db-shm  bot.db-wal
src/: config.rs  error.rs  lib.rs  main.rs
src/base_plugins/: mod.rs
src/plugins/: mod.rs
src/plugins/mc_status/: mc_status.rs  mod.rs
src/plugins/setu/: mod.rs  setu.rs
src/plugins/tool/: group.rs  mod.rs
src/util/: macros.rs  mod.rs
